microservices/execution-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: execution-service
  labels:
    name: execution-service
    environment: production
