microservices/execution-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: execution-service
  namespace: execution-service
  labels:
    app: execution-service
spec:
  type: ClusterIP
  selector:
    app: execution-service
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  sessionAffinity: None
